COPY environment.sh .

--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -1,14 +1,16 @@
 FROM ubuntu:devel
 
 ARG FIX_ALL_GOTCHAS_SCRIPT_LOCATION
-ARG ETC_ENVIRONMENT_LOCATION
 ARG CLEANUP_SCRIPT_LOCATION
 
 ADD $FIX_ALL_GOTCHAS_SCRIPT_LOCATION .
 ADD $CLEANUP_SCRIPT_LOCATION .
+# The base image does not have wget or anything, so we need to manually get environment.sh.
+COPY environment.sh .
 
 RUN set -o allexport \
     && . ./fix_all_gotchas.sh \
     && set +o allexport \
+    && apt-get install --assume-yes git \
     && . ./cleanup.sh
 
