--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -11,6 +11,8 @@ COPY environment.sh .
 RUN set -o allexport \
     && . ./fix_all_gotchas.sh \
     && set +o allexport \
-    && apt-get install --assume-yes git \
+    && apt-get update \
+    && apt-get install --assume-yes git g++ cmake wget \
+    && apt-get install --assume-yes p7zip-full \
     && . ./cleanup.sh
 
