--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -11,7 +11,7 @@ COPY environment.sh .
 RUN set -o allexport \
     && . ./fix_all_gotchas.sh \
     && set +o allexport \
-    && set -o errexit -o nounset -o pipefail \
+    && set -o errexit -o nounset \
     && apt-get update \
     && apt-get install --assume-yes git g++ cmake wget curl \
     && apt-get install --assume-yes libxt6 p7zip-full unzip \
