upgrade curl first

--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -13,8 +13,9 @@ RUN set -o allexport \
     && set +o allexport \
     && set -o pipefail \
     && dnf upgrade-minimal --assumeyes \
+    && dnf install --assumeyes curl \
     && dnf install --assumeyes --setopt=install_weak_deps=False epel-release \
-    && dnf install --assumeyes --setopt=install_weak_deps=False git gcc-c++ cmake wget curl \
+    && dnf install --assumeyes --setopt=install_weak_deps=False git gcc-c++ cmake wget \
     && dnf install --assumeyes --setopt=install_weak_deps=False libXt p7zip-plugins unzip \
     && dnf clean all \
     && . ./cleanup.sh
