p7zip-plugins requires epel?

--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -17,5 +17,6 @@ RUN set -o allexport \
     && dnf install --assumeyes --setopt=install_weak_deps=False git gcc-c++ cmake wget \
     && dnf install --assumeyes --setopt=install_weak_deps=False libXt p7zip-plugins unzip \
     && dnf install --assumeyes --setopt=install_weak_deps=False epel-release \
+    && dnf install --assumeyes --setopt=install_weak_deps=False p7zip-plugins \
     && dnf clean all \
     && . ./cleanup.sh
