no PROXY_CA_PEM

--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -16,7 +16,9 @@ RUN set -o allexport \
     && dnf install --assumeyes curl \
     && dnf install --assumeyes --setopt=install_weak_deps=False git gcc-c++ cmake wget \
     && dnf install --assumeyes --setopt=install_weak_deps=False libXt unzip \
-    && if [ -z ${PROXY_CA_PEM+ABC} ]; then cp $PROXY_CA_PEM /etc/pki/ca-trust/source/anchors/; update-ca-trust; fi \
+    # technically, epel-release succeeds, but then Errors downloading metadata for repository 'epel-modular'
+    && if [ -z ${PROXY_CA_PEM+ABC} ]; then echo 'no PROXY_CA_PEM'; else cp $PROXY_CA_PEM /etc/pki/ca-trust/source/anchors/; fi \
+    && update-ca-trust \
     && dnf install --assumeyes --setopt=install_weak_deps=False epel-release \
     && dnf install --assumeyes --setopt=install_weak_deps=False p7zip-plugins \
     && dnf clean all \
