fetch environment.sh first

--- a/hooks/build
+++ b/hooks/build
@@ -1,4 +1,5 @@
 #!/bin/sh
 # https://docs.docker.com/docker-hub/builds/advanced/#build-hook-examples
+wget $ETC_ENVIRONMENT_LOCATION --output-document environment.sh --no-clobber
 docker build --tag $IMAGE_NAME --file $DOCKERFILE_PATH --build-arg FIX_ALL_GOTCHAS_SCRIPT_LOCATION=$FIX_ALL_GOTCHAS_SCRIPT_LOCATION --build-arg ETC_ENVIRONMENT_LOCATION=$ETC_ENVIRONMENT_LOCATION --build-arg CLEANUP_SCRIPT_LOCATION=$CLEANUP_SCRIPT_LOCATION .
 
